--- a/core/templates/core/menu/sidebar.html
+++ b/core/templates/core/menu/sidebar.html
@@ -174,13 +174,13 @@
                   </li>
 
                   <li class="menu-item">
-                    <a href="" class="menu-link">
+                    <a href="{% url 'loan-list' %}" class="menu-link">
                       <span class="menu-text">Loans</span>
                     </a> 
                   </li>
 
                   <li class="menu-item">
-                    <a href="" class="menu-link">
+                    <a href="{% url 'creditunion-list' %}" class="menu-link">
                       <span class="menu-text">Credit Unions</span>
                     </a> 
                   </li>
