--- a/hr/templates/hr/generic/item_detail.html
+++ b/hr/templates/hr/generic/item_detail.html
@@ -19,7 +19,19 @@
 
                     <p class="text-muted mb-2 font-13"><strong>Manager/HoD :</strong> <span class="ms-2">{{ department.manager.first_name }} {{ department.manager.last_name}} </span></p>
 
-                    <p class="text-muted mb-2 font-13"><strong>Created On :</strong> <span class="ms-2">{{ department.created_at|date:'d M, Y h:i A' }} </span></p>       
+                    <p class="text-muted mb-2 font-13"><strong>Created On :</strong> <span class="ms-2">{{ department.created_at|date:'d M, Y h:i A' }} </span></p> 
+                    
+                {% elif item == 'bank' %}
+                    <a href="{% url 'bank-update' bank.id %}" title="Edit {{ item }}"><button class="btn btn-xs btn-outline-warning rounded-pill waves-effect waves-light"><i class="fe-edit"></i></button></a>
+
+                    <a href="{% url 'bank-list' %}" title="View {{ item }}"><button class="btn btn-xs btn-outline-info rounded-pill waves-effect waves-light"><i class="fas fa-list"></i></button></a>
+
+                    
+                    <h5 class="mb-3 mt-1 text-uppercase bg-light p-2"><i class="mdi mdi-account-circle me-1"></i> Bank Information</h5>
+
+                    <p class="text-muted mb-2 font-13"><strong>Description :</strong> <span class="ms-2">{{ bank.bank_name }} </span></p>
+
+                    <p class="text-muted mb-2 font-13"><strong>Created On :</strong> <span class="ms-2">{{ bank.created_at|date:'d M, Y h:i A' }} </span></p>                 
 
                 {% elif item == 'designation' %}
                     <a href="{% url 'designation-update' designation.id %}" title="Edit {{ item }}"><button class="btn btn-xs btn-outline-warning rounded-pill waves-effect waves-light"><i class="fe-edit"></i></button></a>
@@ -144,6 +156,15 @@
 
                         <div class="inbox-item-img"><img src="{{ employee.photo.url }}" class="rounded-circle" alt=""></div>
                         <p class="inbox-item-author">{{ employee.first_name }} {{ employee.last_name }}</p>
+                         {% if item == 'bank' %}
+                             <p class="inbox-item-text">
+                                {{ employee.branch }} Branch
+                            </p>
+                            <p class="inbox-item-date">
+                                <a href="javascript:(0);" class="btn btn-sm btn-link text-info font-13"> {{ employee.account_number }}</a>
+                            </p>
+                        
+                         {% endif %}
                         {% comment %} <p class="inbox-item-text">
                             {% if salary_item.rate_type == 'variable' and item.variable is not None %}
                                 {{ salary_item.rate_dependency }} [{{ item.variable }}]
